time and motion slides up

--- a/03_time_and_motion/03_time_and_motion.qmd
+++ b/03_time_and_motion/03_time_and_motion.qmd
@@ -33,3 +33,4 @@ revealjs-plugins:
 {{< include contents/_dynamics.qmd >}}
 {{< include contents/_wrenchtransform.qmd >}}
 {{< include contents/_inertial.qmd >}}
+{{< include contents/_ins.qmd >}}
