--- a/03_time_and_motion/contents/_frontmatter.qmd
+++ b/03_time_and_motion/contents/_frontmatter.qmd
@@ -20,4 +20,5 @@ Transforming Spatial Velocities <br>
 Incremental Rigid-Body Motion <br>
 Dynamics of Moving Bodies <br>
 Transforming Wrenches <br>
+Inertial Navigation
 :::
