--- a/03_time_and_motion/contents/_derivative.qmd
+++ b/03_time_and_motion/contents/_derivative.qmd
@@ -50,8 +50,8 @@ expressed in frame $\{A\}$, we call it the _spatial angular velocity_, and use
 the formula on the right.
 
 * The space of skew-symmetric matrices is denoted by
-$$ \mathfrak{so}(3) \triangleq \left\{ S \in \mathbb{R}^{3 \times 3}: S^\top =
--S \right\}. $$
+$$ \mathfrak{so}(3) \triangleq \left\{ \bm{S} \in \mathbb{R}^{3 \times 3}: \bm{S}^\top =
+-\bm{S} \right\}. $$
 
 ## <span style="font-size: 87%">Exponential coordinates for rigid motion and twists</span> {.smaller}
 
@@ -122,7 +122,7 @@ $$ \hat{\bm{\eta}} = \begin{bmatrix} \bm{0} & \bm{v} \\ \bm{0} & 0
 skew-symmetric matrices $\hat{\bm{\omega}}$.
   - Such a matrix is called a _twist_ and it lives in the space 
   $$ \mathfrak{se}(3) \triangleq \left\{(\bm{v}, \hat{\bm{\omega}}), \bm{v} \in
-  \mathbb{R}^3, \hat{\omega} \in \mathfrak{so}(3)\right\}. $$
+  \mathbb{R}^3, \hat{\bm{\omega}} \in \mathfrak{so}(3)\right\}. $$
   - The _hat_ $\hat{~}$ and _vee_ $\vee$ operators go back and forth in this
     manner:
   $$ \hat{\bm{\eta}} = \begin{bmatrix} \hat{\bm{\omega}} & \bm{v} \\ \bm{0} & 0 \end{bmatrix} 
